app/static/main.css
@font-face {
    font-family: Bisect;
    src: url("../static/fonts/Bisect.otf") format("opentype");
}

body {
    background: url('https://i.imgur.com/bXGd4TW.png') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.placeholder {
    height: 3rem;
}

.precision-placeholder {
    height: 1rem;
}

.search-title {
    font-family: Bisect;
}

.search-card {
    background-color: rgba(255, 255, 255, 0.9);
}

.search-card-row {
    margin-bottom: 2.5rem;
}

.search-tag-input {
    --tags-border-color: #BBB;
    --tags-hover-border-color: #AAA;
    --tag-bg: rgba(137,80,252,.2);
    --tag-text-color: #8950fc;
    border-radius: 4px;
}

